--- a/src/locales/lang/zh-cn.json
+++ b/src/locales/lang/zh-cn.json
@@ -1,11 +1,40 @@
 {
+  "app": {
+      "account": "用户名",
+      "captcha": "验证码",
+      "check": "确认",
+      "goLogin": "去登录",
+      "login": "登录",
+      "logout": "退出登录",
+      "newPassword": "新密码",
+      "password": "密码",
+      "profile": "个人设置",
+      "sendCaptcha": "发送验证码",
+      "search": {
+          "input": "搜索页面，支持标题、URL模糊查询",
+          "alt_s": "唤醒搜索面板",
+          "up_down": "切换搜索结果",
+          "enter": "访问页面",
+          "esc": "退出"
+      },
+      "tabbar": {
+          "reload": "重新加载",
+          "close": "关闭标签页",
+          "pin": "固定",
+          "unpin": "取消固定",
+          "maximize": "最大化",
+          "closeOtherSide": "关闭其它标签页",
+          "closeLeftSide": "关闭左侧标签页",
+          "closeRightSide": "关闭右侧标签页"
+      }
+  },
   "route": {
-    "dashboard": "控制台",
-    "i18n": "国际化",
-    "login": "登录",
-    "personal": {
-      "editpassword": "修改密码",
-      "setting": "个人设置"
-    }
+      "dashboard": "控制台",
+      "i18n": "国际化",
+      "login": "登录",
+      "personal": {
+          "editpassword": "修改密码",
+          "setting": "个人设置"
+      }
   }
 }
