--- a/src/locales/lang/zh-tw.json
+++ b/src/locales/lang/zh-tw.json
@@ -1,11 +1,40 @@
 {
+  "app": {
+      "account": "賬號",
+      "captcha": "驗證碼",
+      "check": "確 認",
+      "goLogin": "去登錄",
+      "login": "登 錄",
+      "logout": "退出登錄",
+      "newPassword": "新密碼",
+      "password": "密碼",
+      "profile": "我的資料",
+      "sendCaptcha": "發送驗證碼",
+      "search": {
+          "input": "搜索頁面，支持標題、URL模糊查詢",
+          "alt_s": "喚醒搜索麵板",
+          "up_down": "切換搜索結果",
+          "enter": "訪問頁面",
+          "esc": "退出"
+      },
+      "tabbar": {
+          "reload": "重新載入",
+          "close": "關閉標籤頁",
+          "pin": "固定",
+          "unpin": "取消固定",
+          "maximize": "最大化",
+          "closeOtherSide": "關閉其它標籤頁",
+          "closeLeftSide": "關閉左側標籤頁",
+          "closeRightSide": "關閉右側標籤頁"
+      }
+  },
   "route": {
-    "dashboard": "歡迎頁",
-    "i18n": "國際化",
-    "login": "登錄",
-    "personal": {
-      "editpassword": "修改密碼",
-      "setting": "我的設置"
-    }
+      "dashboard": "歡迎頁",
+      "i18n": "國際化",
+      "login": "登錄",
+      "personal": {
+          "editpassword": "修改密碼",
+          "setting": "我的設置"
+      }
   }
 }
