--- a/src/locales/lang/en.json
+++ b/src/locales/lang/en.json
@@ -1,40 +1,44 @@
 {
-  "app": {
-      "account": "account",
-      "captcha": "captcha",
-      "check": "Submit",
-      "goLogin": "go login",
-      "login": "Login",
-      "logout": "Logout",
-      "newPassword": "new password",
-      "password": "password",
-      "profile": "Profile",
-      "sendCaptcha": "send captcha",
-      "search": {
-          "input": "Search page, support title, URL fuzzy query",
-          "alt_s": "Wake up search panel",
-          "up_down": "Switch search results",
-          "enter": "Visit page",
-          "esc": "Exit"
-      },
-      "tabbar": {
-          "reload": "Reload",
-          "close": "Close",
-          "pin": "Pin",
-          "unpin": "Unpin",
-          "maximize": "Maximize",
-          "closeOtherSide": "Close Otherside Tabs",
-          "closeLeftSide": "Close Leftside Tabs",
-          "closeRightSide": "Close Rightside Tabs"
-      }
-  },
-  "route": {
-      "login": "Login",
-      "dashboard": "Dashboard",
-      "personal": {
-          "setting": "Personal Setting",
-          "editpassword": "Edit Password"
-      },
-      "i18n": "I18N"
-  }
+    "app": {
+        "account": "account",
+        "captcha": "captcha",
+        "check": "Submit",
+        "goLogin": "go login",
+        "login": "Login",
+        "logout": "Logout",
+        "newPassword": "new password",
+        "password": "password",
+        "profile": "Profile",
+        "sendCaptcha": "send captcha",
+        "search": {
+            "input": "Search page, support title, URL fuzzy query",
+            "alt_s": "Wake up search panel",
+            "up_down": "Switch search results",
+            "enter": "Visit page",
+            "esc": "Exit",
+            "type": {
+                "menu": "Search menu",
+                "tab": "Search tag"
+            }
+        },
+        "tabbar": {
+            "reload": "Reload",
+            "close": "Close",
+            "pin": "Pin",
+            "unpin": "Unpin",
+            "maximize": "Maximize",
+            "closeOtherSide": "Close Otherside Tabs",
+            "closeLeftSide": "Close Leftside Tabs",
+            "closeRightSide": "Close Rightside Tabs"
+        }
+    },
+    "route": {
+        "login": "Login",
+        "home": "Home",
+        "personal": {
+            "setting": "Personal Setting",
+            "editpassword": "Edit Password"
+        },
+        "i18n": "I18N"
+    }
 }
