--- a/src/locales/lang/en.json
+++ b/src/locales/lang/en.json
@@ -30,6 +30,7 @@
       "closeOtherSide": "Close Otherside Tabs",
       "closeRightSide": "Close Rightside Tabs",
       "maximize": "Maximize",
+      "searchTabs": "Search Tabs",
       "pin": "Pin",
       "reload": "Reload",
       "unpin": "Unpin"
