--- a/src/locales/lang/zh-cn.json
+++ b/src/locales/lang/zh-cn.json
@@ -54,7 +54,9 @@
       "closeLeftSide": "关闭左侧标签页",
       "closeOtherSide": "关闭其它标签页",
       "closeRightSide": "关闭右侧标签页",
+
       "maximize": "最大化",
+      "searchTabs": "搜索标签页",
       "pin": "固定",
       "reload": "重新加载",
       "unpin": "取消固定"
