--- a/src/locales/lang/zh-tw.json
+++ b/src/locales/lang/zh-tw.json
@@ -29,6 +29,7 @@
       "closeOtherSide": "關閉其它標籤頁",
       "closeRightSide": "關閉右側標籤頁",
       "maximize": "最大化",
+      "searchTabs": "搜索標籤頁",
       "pin": "固定",
       "reload": "重新載入",
       "unpin": "取消固定"
