--- a/src/locales/lang/zh-cn/system/resource.json
+++ b/src/locales/lang/zh-cn/system/resource.json
@@ -11,10 +11,12 @@
   "icon": "菜单图标",
   "id": "ID",
   "isDef": "是否默认",
-  "isGeneral": "通用菜单",
+  "isGeneral": "公共资源",
+  "subGroup": "分组",
   "meta": {
     "activeMenu": "高亮导航",
     "badge": "徽标",
+    "newWindow": "新窗口打开",
     "breadcrumb": "面包屑",
     "cache": "缓存规则",
     "copyright": "底部版权",
@@ -29,6 +31,7 @@
   "metaJson": "路由信息配置",
   "name": "名称",
   "object": "资源",
+  "parentName": "父资源",
   "parentId": "父级菜单ID",
   "path": "路径",
   "redirect": "重定向",
