--- a/src/locales/lang/zh-cn/app.json
+++ b/src/locales/lang/zh-cn/app.json
@@ -28,6 +28,7 @@
     "closeOtherSide": "关闭其它标签页",
     "closeRightSide": "关闭右侧标签页",
     "maximize": "最大化",
+    "newWindow": "新窗口中打开",
     "searchTabs": "搜索标签页",
     "pin": "固定",
     "reload": "重新加载",
