--- a/src/locales/lang/en/system/resource.json
+++ b/src/locales/lang/en/system/resource.json
@@ -7,6 +7,8 @@
   "customClass": "CustomClass",
   "dataScope": "DataScope",
   "group": "Group",
+  "fieldIsSecret": "fieldIsSecret",
+  "fieldIsEdit": "fieldIsEdit",
   "icon": "Icon",
   "id": "Id",
   "isDef": "IsDef",
