--- a/src/locales/lang/zh-cn/devOperation/application/defApplication.json
+++ b/src/locales/lang/zh-cn/devOperation/application/defApplication.json
@@ -11,8 +11,8 @@
   "introduce": "简介",
   "remark": "备注",
   "url": "应用地址",
-  "isGeneral": "是否公共应用",
-  "isVisible": "是否可见",
+  "isGeneral": "公共应用",
+  "isVisible": "首页显示",
   "sortValue": "排序",
   "createdBy": "创建人",
   "createdTime": "创建时间",
