--- a/src/locales/lang/zh-cn/common.json
+++ b/src/locales/lang/zh-cn/common.json
@@ -80,5 +80,15 @@
     "query": "查询",
     "upload": "上传",
     "view": "查看"
-  }
+  },
+  "backToHome": "返回首页",
+  "login": "登录",
+  "logout": "退出登录",
+  "prompt": "提示",
+  "cancel": "取消",
+  "confirm": "确认",
+  "noData": "暂无数据",
+  "refresh": "刷新",
+  "loadingMenu": "加载菜单中",
+  "query": "查询"
 }
